--- a/dashboard.css
+++ b/dashboard.css
@@ -63,8 +63,24 @@ form>#publishBlog {
     font-size: 1.5rem
 }
 
+nav{
+    display: flex;
+}
+
 
 .header>nav>.logOut {
+    margin: 0.5rem;
+    color: white;
+    border: 0px solid;
+    min-width: 30%;
+    padding: 1rem 2rem 1rem 2rem;
+    background-color: rgb(105, 105, 236);
+    border-radius: 5px;
+    text-align: center;
+    font-weight: bolder;
+}
+
+.header>nav>#user {
     margin: 0.5rem;
     color: white;
     border: 0px solid;
@@ -94,13 +110,13 @@ Form>#text {
     box-shadow:0px 0px 10px black;
 }
 
-/* footer {
+footer {
     text-align: center;
     background-color: rgb(105, 105, 236);
     padding: 1rem;
-    margin: 0rem;
+    margin-top: 3rem;
     margin-bottom: 1rem;
     color: white;
     font-size: larger;
     border-radius: 8px;
-} */
+}
